Enable edit and continue for Win32/64 debug configurations
There's no such thing in ARM64 so leaving ARM off entirely

--- a/.gitignore
+++ b/.gitignore
@@ -439,3 +439,5 @@ contrib/macos/dosbox-x.plist
 /dosbox-x.conf
 /src/dosbox-x.conf
 
+# visual studio edit and continue temp files
+/vs/enc_temp_folder
