Prepare for release

--- a/dosbox-x.reference.full.conf
+++ b/dosbox-x.reference.full.conf
@@ -1,4 +1,4 @@
-# This is the configuration file for DOSBox-X 2024.07.01. (Please use the latest version of DOSBox-X)
+# This is the configuration file for DOSBox-X 2024.10.01. (Please use the latest version of DOSBox-X)
 # Lines starting with a # are comment lines and are ignored by DOSBox-X.
 # They are used to (briefly) document the effect of each option.
 # To write out ALL options, use command 'config -all' with -wc or -writeconf options.
@@ -199,6 +199,10 @@ debuggerrun = debugger
 #                                     startbanner: If set (default), DOSBox-X will display the welcome banner when it starts.
 #                                bannercolortheme: You can specify a different background color theme for the welcome banner from the default one.
 #                                                    Possible values: default, black, red, green, yellow, blue, magenta, cyan, white.
+#                        configuration tool theme: Theme for the configuration tool.
+#                                                    If not set, host dark mode setting will be followed.
+#                                                    
+#                                                    Possible values: Windows Default, Arizona, Black Leather Jacket, Bordeaux, Cinnamon, Designer, Emerald City, Fluorescent, HotDog Stand, LCD Default Screen Settings, LCD Reversed - Dark, LCD Reversed - Light, Mahogany, Monochrome, Ocean, Pastel, Patchwork, Plasma Power Saver, Rugby, The Blues, Tweed, Valentine, Wingtips.
 #                                       dpi aware: Set this option (auto by default) to indicate to your OS that DOSBox-X is DPI aware.
 #                                                    If it is not set, Windows Vista/7/8/10 and higher may upscale the DOSBox-X window
 #                                                    on higher resolution monitors which is probably not what you want.
@@ -438,6 +442,7 @@ fastbioslogo                                    = false
 disable graphical splash                        = false
 startbanner                                     = true
 bannercolortheme                                = default
+configuration tool theme                        = 
 dpi aware                                       = auto
 quit warning                                    = auto
 allow quit after warning                        = true
@@ -895,6 +900,10 @@ j3100textcolor   =
 #                                                      This does not affect the linear framebuffer's location. It only affects the linear framebuffer
 #                                                      location reported by the VESA BIOS. Set to nonzero for DOS games with sloppy VESA graphics pointer management.
 #                                                          MFX "Melvindale" (1996): Set this option to 2 to center the picture properly.
+#                      vesa lfb pel scanline adjust: If non-zero, the VESA BIOS will report the linear framebuffer offset by this many pixels.
+#                                                      This does not affect the linear framebuffer's location. It only affects the linear framebuffer
+#                                                      location reported by the VESA BIOS. Set to nonzero for DOS games with sloppy VESA graphics pointer management.
+#                                                          Contract "Out of Control" (1997): Set this option to 128 to fix the display.
 #            vesa map non-lfb modes to 128kb region: If set, VESA BIOS SVGA modes will be set to map 128KB of video memory to A0000-BFFFF instead of
 #                                                      64KB at A0000-AFFFF. This does not affect the SVGA window size or granularity.
 #                                                      Some games or demoscene productions assume that they can render into the next SVGA window/bank
@@ -1018,6 +1027,7 @@ vesa bank switching window range check            = true
 vesa zero buffer on get information               = true
 vesa set display vsync                            = -1
 vesa lfb base scanline adjust                     = 0
+vesa lfb pel scanline adjust                      = 0
 vesa map non-lfb modes to 128kb region            = false
 ega per scanline hpel                             = true
 allow hpel effects                                = false
@@ -1573,9 +1583,14 @@ fluid.chorus.type       = 0
 #                                                     Option is needed for:
 #                                                        Inconexia by Iguana (1993)
 #                                          sbmixer: Allow the Sound Blaster mixer to modify the DOSBox-X mixer.
+#                                              cms: Enable CMS emulation ('auto' by default).
+#                                                       off:   Disable CMS emulation (except when the Game Blaster is selected).
+#                                                       on:    Enable CMS emulation on Sound Blaster 1 and 2.
+#                                                       auto:  Auto-enable CMS emulation for Sound Blaster 1 and Game Blaster.
+#                                                     Possible values: on, off, auto.
 #                                          oplmode: Type of OPL emulation. On 'auto' the mode is determined by the 'sbtype' setting.
-#                                                     All OPL modes are AdLib-compatible, except for 'cms' (set 'sbtype=none' with 'cms' for a Game Blaster).
-#                                                     Possible values: auto, cms, opl2, dualopl2, opl3, opl3gold, none, hardware, hardwaregb, esfm.
+#                                                     All OPL modes are AdLib-compatible.
+#                                                     Possible values: auto, opl2, dualopl2, opl3, opl3gold, none, hardware, hardwaregb, esfm.
 #             adlib force timer overflow on detect: If set, Adlib/OPL emulation will signal 'overflow' on timers after 50 I/O reads.
 #                                                     This is a temporary hack to work around timing bugs noted in DOSBox-X. Certain
 #                                                     games (Wolfenstein 3D) poll the Adlib status port a fixed number of times assuming
@@ -1653,6 +1668,7 @@ disable filtering                                = false
 dsp write buffer status must return 0x7f or 0xff = false
 pre-set sbpro stereo                             = false
 sbmixer                                          = true
+cms                                              = auto
 oplmode                                          = auto
 adlib force timer overflow on detect             = false
 oplemu                                           = default
@@ -1679,6 +1695,11 @@ io port aliasing                                 = true
 
 [gus]
 #                                gus: Enable the Gravis Ultrasound emulation.
+#         global register read alias: If true, all GUS global registers have a read alias at N and N+0x80.
+#                                       If false, only the voice registers 0x0-0xF have a read alias at 0x80-0x8F as officially documented.
+#                                       If auto, automatically choose based on other settings such as GUS type.
+#                                       This setting may be needed for DOS demoscene entries that assume aliasing behavior such as Out of Control by Contract.
+#                                       Possible values: true, false, 1, 0, auto.
 #                            autoamp: If set, GF1 output will reduce in volume automatically if the sum of all channels exceeds full volume.
 #                                       If not set, then loud music will clip to full volume just as it would on real hardware.
 #                                       Enable this option for loud music if you want a more pleasing rendition without saturation and distortion.
@@ -1733,6 +1754,7 @@ io port aliasing                                 = true
 #                                       the patch files for GUS playback. Patch sets used
 #                                       with Timidity should work fine.
 gus                                = false
+global register read alias         = auto
 autoamp                            = false
 unmask dma                         = false
 ignore channel count while active  = false
@@ -2125,6 +2147,8 @@ timeout     = 0
 #                              drive z expand path: If set, DOSBox-X will automatically expand the %PATH% environment variable to include the subdirectories on the Z drive.
 #                               drive z hide files: The files or directories listed here (separated by space) will be either hidden or removed from the Z drive.
 #                                                     Files with leading forward slashes (e.g. "/DEBUG\BIOSTEST.COM") will become hidden files (DIR /A will list them).
+#                      automount drive directories: If set, DOSBox-X will automatically mount existing drive directories from C drive to Y drive, e.g. "DriveC".
+#                                                     NOTE: This option is only available under Windows.
 #                             hidenonrepresentable: If set, DOSBox-X will hide files on local drives that are non-representative in the current DOS code page.
 #                                                     This may be required for some programs such as Windows 3.x Setup if the drives contain international filenames.
 #                           hma minimum allocation: Minimum allocation size for HMA in bytes (equivalent to /HMAMIN= parameter).
@@ -2337,6 +2361,7 @@ drive z is remote                                = auto
 drive z convert fat                              = false
 drive z expand path                              = true
 drive z hide files                               = /TEXTUTIL\25.COM /TEXTUTIL\28.COM /TEXTUTIL\50.COM
+automount drive directories                      = false
 hidenonrepresentable                             = true
 hma minimum allocation                           = 0
 ansi.sys                                         = true
