--- a/dosbox-x.reference.conf
+++ b/dosbox-x.reference.conf
@@ -1,4 +1,4 @@
-# This is the configuration file for DOSBox-X 2024.07.01. (Please use the latest version of DOSBox-X)
+# This is the configuration file for DOSBox-X 2024.10.01. (Please use the latest version of DOSBox-X)
 # Lines starting with a # are comment lines and are ignored by DOSBox-X.
 # They are used to (briefly) document the effect of each option.
 # To write out ALL options, use command 'config -all' with -wc or -writeconf options.
@@ -123,6 +123,10 @@ debuggerrun = debugger
 #               startbanner: If set (default), DOSBox-X will display the welcome banner when it starts.
 #          bannercolortheme: You can specify a different background color theme for the welcome banner from the default one.
 #                              Possible values: default, black, red, green, yellow, blue, magenta, cyan, white.
+#  configuration tool theme: Theme for the configuration tool.
+#                              If not set, host dark mode setting will be followed.
+#                              
+#                              Possible values: Windows Default, Arizona, Black Leather Jacket, Bordeaux, Cinnamon, Designer, Emerald City, Fluorescent, HotDog Stand, LCD Default Screen Settings, LCD Reversed - Dark, LCD Reversed - Light, Mahogany, Monochrome, Ocean, Pastel, Patchwork, Plasma Power Saver, Rugby, The Blues, Tweed, Valentine, Wingtips.
 #                 dpi aware: Set this option (auto by default) to indicate to your OS that DOSBox-X is DPI aware.
 #                              If it is not set, Windows Vista/7/8/10 and higher may upscale the DOSBox-X window
 #                              on higher resolution monitors which is probably not what you want.
@@ -202,6 +206,7 @@ title                     =
 fastbioslogo              = false
 startbanner               = true
 bannercolortheme          = default
+configuration tool theme  = 
 dpi aware                 = auto
 quit warning              = auto
 working directory option  = default
@@ -426,7 +431,7 @@ j3100colorscroll = false
 #                              Possible values: true, false, 1, 0, auto.
 #
 # Advanced options (see full configuration reference file [dosbox-x.reference.full.conf] for more details):
-# -> int 10h use video parameter table; vmemdelay; prevent capture; vbe window granularity; vbe window size; enable 8-bit dac; svga lfb base; pci vga; vga attribute controller mapping; enable supermegazeux tweakmode; vga bios use rom image; vga bios rom image; vga bios size override; video bios dont duplicate cga first half rom font; video bios always offer 14-pixel high rom font; video bios always offer 16-pixel high rom font; video bios enable cga second half rom font; forcerate; sierra ramdac; sierra ramdac lock 565; vga fill active memory; page flip debug line; vertical retrace poll debug line; cgasnow; vga 3da undefined bits; rom bios 8x8 CGA font; rom bios video parameter table; int 10h points at vga bios; unmask timer on int 10 setmode; vesa bank switching window mirroring; vesa bank switching window range check; vesa zero buffer on get information; vesa set display vsync; vesa lfb base scanline adjust; vesa map non-lfb modes to 128kb region; ega per scanline hpel; allow hpel effects; allow hretrace effects; hretrace effect weight; vesa modelist cap; vesa modelist width limit; vesa modelist height limit; vesa vbe put modelist in vesa information; vesa vbe 1.2 modes are 32bpp; allow low resolution vesa modes; allow explicit 24bpp vesa modes; allow high definition vesa modes; allow unusual vesa modes; allow 32bpp vesa modes; allow 24bpp vesa modes; allow 16bpp vesa modes; allow 15bpp vesa modes; allow 8bpp vesa modes; allow 4bpp vesa modes; allow 4bpp packed vesa modes; allow tty vesa modes; double-buffered line compare; ignore vblank wraparound; ignore extended memory bit; enable vga resize delay; resize only on vga active display width increase; vga palette update on full load; ignore odd-even mode in non-cga modes; ignore sequencer blanking
+# -> int 10h use video parameter table; vmemdelay; prevent capture; vbe window granularity; vbe window size; enable 8-bit dac; svga lfb base; pci vga; vga attribute controller mapping; enable supermegazeux tweakmode; vga bios use rom image; vga bios rom image; vga bios size override; video bios dont duplicate cga first half rom font; video bios always offer 14-pixel high rom font; video bios always offer 16-pixel high rom font; video bios enable cga second half rom font; forcerate; sierra ramdac; sierra ramdac lock 565; vga fill active memory; page flip debug line; vertical retrace poll debug line; cgasnow; vga 3da undefined bits; rom bios 8x8 CGA font; rom bios video parameter table; int 10h points at vga bios; unmask timer on int 10 setmode; vesa bank switching window mirroring; vesa bank switching window range check; vesa zero buffer on get information; vesa set display vsync; vesa lfb base scanline adjust; vesa lfb pel scanline adjust; vesa map non-lfb modes to 128kb region; ega per scanline hpel; allow hpel effects; allow hretrace effects; hretrace effect weight; vesa modelist cap; vesa modelist width limit; vesa modelist height limit; vesa vbe put modelist in vesa information; vesa vbe 1.2 modes are 32bpp; allow low resolution vesa modes; allow explicit 24bpp vesa modes; allow high definition vesa modes; allow unusual vesa modes; allow 32bpp vesa modes; allow 24bpp vesa modes; allow 16bpp vesa modes; allow 15bpp vesa modes; allow 8bpp vesa modes; allow 4bpp vesa modes; allow 4bpp packed vesa modes; allow tty vesa modes; double-buffered line compare; ignore vblank wraparound; ignore extended memory bit; enable vga resize delay; resize only on vga active display width increase; vga palette update on full load; ignore odd-even mode in non-cga modes; ignore sequencer blanking
 #
 vmemsize                  = -1
 vmemsizekb                = 0
@@ -687,8 +692,8 @@ fluid.soundfont =
 #                                 compensate. This setting has no meaning if emulating a Sound Blaster 16 card.
 #                      sbmixer: Allow the Sound Blaster mixer to modify the DOSBox-X mixer.
 #                      oplmode: Type of OPL emulation. On 'auto' the mode is determined by the 'sbtype' setting.
-#                                 All OPL modes are AdLib-compatible, except for 'cms' (set 'sbtype=none' with 'cms' for a Game Blaster).
-#                                 Possible values: auto, cms, opl2, dualopl2, opl3, opl3gold, none, hardware, hardwaregb, esfm.
+#                                 All OPL modes are AdLib-compatible.
+#                                 Possible values: auto, opl2, dualopl2, opl3, opl3gold, none, hardware, hardwaregb, esfm.
 #                       oplemu: Provider for the OPL emulation. 'compat' might provide better quality.
 #                                 'nuked' is the most accurate (but the most CPU-intensive). See oplrate as well.
 #                                 Possible values: default, compat, fast, nuked, mame, opl2board, opl3duoboard, retrowave_opl3, esfmu.
@@ -703,7 +708,7 @@ fluid.soundfont =
 # blaster environment variable: Whether or not to set the BLASTER environment variable automatically at startup
 #
 # Advanced options (see full configuration reference file [dosbox-x.reference.full.conf] for more details):
-# -> mindma; irq hack; dsp command aliases; pic unmask irq; enable asp; disable filtering; dsp write buffer status must return 0x7f or 0xff; pre-set sbpro stereo; adlib force timer overflow on detect; retrowave_spi_cs; force dsp auto-init; force goldplay; goldplay stereo; dsp require interrupt acknowledge; dsp write busy delay; sample rate limits; instant direct dac; stereo control with sbpro only; dsp busy cycle rate; dsp busy cycle always; dsp busy cycle duty; io port aliasing
+# -> mindma; irq hack; dsp command aliases; pic unmask irq; enable asp; disable filtering; dsp write buffer status must return 0x7f or 0xff; pre-set sbpro stereo; cms; adlib force timer overflow on detect; retrowave_spi_cs; force dsp auto-init; force goldplay; goldplay stereo; dsp require interrupt acknowledge; dsp write busy delay; sample rate limits; instant direct dac; stereo control with sbpro only; dsp busy cycle rate; dsp busy cycle always; dsp busy cycle duty; io port aliasing
 #
 sbtype                       = sb16
 sbbase                       = 220
@@ -725,40 +730,46 @@ goldplay                     = true
 blaster environment variable = true
 
 [gus]
-#               gus: Enable the Gravis Ultrasound emulation.
-#           gusrate: Sample rate of Ultrasound emulation.
-#                      Possible values: 49716, 48000, 44100, 32000, 22050, 16000, 11025, 8000.
-#        gusmemsize: Amount of RAM on the Gravis Ultrasound in KB. Set to -1 for default.
-# gus master volume: Master Gravis Ultrasound GF1 volume, in decibels. Reducing the master volume can help with games or demoscene productions where the music is too loud and clipping.
-#           gusbase: The IO base address of the Gravis Ultrasound.
-#                      Possible values: 240, 220, 260, 280, 2a0, 2c0, 2e0, 300, 210, 230, 250.
-#            gusirq: The IRQ number of the Gravis Ultrasound.
-#                      Possible values: 5, 3, 7, 9, 10, 11, 12.
-#            gusdma: The DMA channel of the Gravis Ultrasound.
-#                      Possible values: 3, 0, 1, 5, 6, 7.
-#           gustype: Type of Gravis Ultrasound to emulate.
-#                      classic             Original Gravis Ultrasound chipset
-#                      classic37           Original Gravis Ultrasound with ICS Mixer (rev 3.7)
-#                      max                 Gravis Ultrasound MAX emulation (with CS4231 codec)
-#                      interwave           Gravis Ultrasound Plug & Play (interwave)
-#                      Possible values: classic, classic37, max, interwave.
-#          ultradir: Path to Ultrasound directory. In this directory
-#                      there should be a MIDI directory that contains
-#                      the patch files for GUS playback. Patch sets used
-#                      with Timidity should work fine.
+#                        gus: Enable the Gravis Ultrasound emulation.
+# global register read alias: If true, all GUS global registers have a read alias at N and N+0x80.
+#                               If false, only the voice registers 0x0-0xF have a read alias at 0x80-0x8F as officially documented.
+#                               If auto, automatically choose based on other settings such as GUS type.
+#                               This setting may be needed for DOS demoscene entries that assume aliasing behavior such as Out of Control by Contract.
+#                               Possible values: true, false, 1, 0, auto.
+#                    gusrate: Sample rate of Ultrasound emulation.
+#                               Possible values: 49716, 48000, 44100, 32000, 22050, 16000, 11025, 8000.
+#                 gusmemsize: Amount of RAM on the Gravis Ultrasound in KB. Set to -1 for default.
+#          gus master volume: Master Gravis Ultrasound GF1 volume, in decibels. Reducing the master volume can help with games or demoscene productions where the music is too loud and clipping.
+#                    gusbase: The IO base address of the Gravis Ultrasound.
+#                               Possible values: 240, 220, 260, 280, 2a0, 2c0, 2e0, 300, 210, 230, 250.
+#                     gusirq: The IRQ number of the Gravis Ultrasound.
+#                               Possible values: 5, 3, 7, 9, 10, 11, 12.
+#                     gusdma: The DMA channel of the Gravis Ultrasound.
+#                               Possible values: 3, 0, 1, 5, 6, 7.
+#                    gustype: Type of Gravis Ultrasound to emulate.
+#                               classic             Original Gravis Ultrasound chipset
+#                               classic37           Original Gravis Ultrasound with ICS Mixer (rev 3.7)
+#                               max                 Gravis Ultrasound MAX emulation (with CS4231 codec)
+#                               interwave           Gravis Ultrasound Plug & Play (interwave)
+#                               Possible values: classic, classic37, max, interwave.
+#                   ultradir: Path to Ultrasound directory. In this directory
+#                               there should be a MIDI directory that contains
+#                               the patch files for GUS playback. Patch sets used
+#                               with Timidity should work fine.
 #
 # Advanced options (see full configuration reference file [dosbox-x.reference.full.conf] for more details):
 # -> autoamp; unmask dma; ignore channel count while active; pic unmask irq; startup initialized; dma enable on dma control polling; clear dma tc irq if excess polling; force master irq enable; gus panning table; gus fixed render rate; irq hack
 #
-gus               = false
-gusrate           = 48000
-gusmemsize        = -1
-gus master volume = 0.00
-gusbase           = 240
-gusirq            = 5
-gusdma            = 3
-gustype           = classic
-ultradir          = C:\ULTRASND
+gus                        = false
+global register read alias = auto
+gusrate                    = 48000
+gusmemsize                 = -1
+gus master volume          = 0.00
+gusbase                    = 240
+gusirq                     = 5
+gusdma                     = 3
+gustype                    = classic
+ultradir                   = C:\ULTRASND
 
 [innova]
 #     innova: Enable the Innovation SSI-2001 emulation.
@@ -1135,7 +1146,7 @@ timeout     = 0
 #                    dos idle api: If set, DOSBox-X can lower the host system's CPU load when a supported guest program is idle.
 #
 # Advanced options (see full configuration reference file [dosbox-x.reference.full.conf] for more details):
-# -> xms memmove causes flat real mode; xms init causes flat real mode; resized free memory block becomes allocated; badcommandhandler; mscdex device name; hma allow reservation; command shell flush keyboard buffer; special operation file prefix; drive z is remote; drive z convert fat; drive z expand path; drive z hide files; hidenonrepresentable; hma minimum allocation; dos sda size; hma free space; cpm compatibility mode; minimum dos initial private segment; minimum mcb segment; enable dummy device mcb; maximum environment block size on exec; additional environment block size on exec; enable a20 on windows init; zero memory on xms memory allocation; vcpi; unmask timer on disk io; zero int 67h if no ems; zero unused int 68h; emm386 startup active; zero memory on ems memory allocation; ems system handle memory size; ems system handle on even megabyte; ems frame; umb start; umb end; kernel allocation in umb; keep umb on boot; keep private area on boot; private area in umb; autoa20fix; autoloadfix; startincon; int33 max x; int33 max y; int33 xy adjust; int33 hide host cursor if interrupt subroutine; int33 hide host cursor when polling; int33 disable cell granularity; int 13 disk change detect; int 13 extensions; biosps2; int15 wait force unmask irq; int15 mouse callback does not preserve registers; filenamechar; collating and uppercase; con device use int 16h to detect keyboard input; zero memory on int 21h memory allocation; pipe temporary device
+# -> xms memmove causes flat real mode; xms init causes flat real mode; resized free memory block becomes allocated; badcommandhandler; mscdex device name; hma allow reservation; command shell flush keyboard buffer; special operation file prefix; drive z is remote; drive z convert fat; drive z expand path; drive z hide files; automount drive directories; hidenonrepresentable; hma minimum allocation; dos sda size; hma free space; cpm compatibility mode; minimum dos initial private segment; minimum mcb segment; enable dummy device mcb; maximum environment block size on exec; additional environment block size on exec; enable a20 on windows init; zero memory on xms memory allocation; vcpi; unmask timer on disk io; zero int 67h if no ems; zero unused int 68h; emm386 startup active; zero memory on ems memory allocation; ems system handle memory size; ems system handle on even megabyte; ems frame; umb start; umb end; kernel allocation in umb; keep umb on boot; keep private area on boot; private area in umb; autoa20fix; autoloadfix; startincon; int33 max x; int33 max y; int33 xy adjust; int33 hide host cursor if interrupt subroutine; int33 hide host cursor when polling; int33 disable cell granularity; int 13 disk change detect; int 13 extensions; biosps2; int15 wait force unmask irq; int15 mouse callback does not preserve registers; filenamechar; collating and uppercase; con device use int 16h to detect keyboard input; zero memory on int 21h memory allocation; pipe temporary device
 #
 xms                             = true
 xms handles                     = 0
