--- a/_data/latest_version.yml
+++ b/_data/latest_version.yml
@@ -1,7 +1,8 @@
-version: 2024.07.01
-git_tag: dosbox-x-v2024.07.01
-winXP_setup_file: dosbox-x-winXP-2024.03.01-setup.exe
-win9x_file: dosbox-x-mingw-win32-lowend9x-20240702034526.zip
-macos_intel_file: dosbox-x-macosx-x86_64-20240702034526.zip
-macos_arm_file: dosbox-x-macosx-arm64-20240701205503.zip
-dos_hx_file: dosbox-x-mingw-hx-dos-20240702034526.zip
+version: 2024.10.01
+git_tag: dosbox-x-v2024.10.01
+windows_setup_file: dosbox-x-windows-2024.10.01-setup.exe
+winXP_setup_file: dosbox-x-winXP-2024.10.01-setup.exe
+win9x_file: dosbox-x-mingw-win32-lowend9x-20241002061636.zip
+macos_intel_file: dosbox-x-macosx-x86_64-20241002061636.zip
+macos_arm_file: dosbox-x-macosx-arm64-20241002061636.zip
+dos_hx_file: dosbox-x-mingw-hx-dos-20241002061636.zip
