Fix incorrect date formatting in .pages.yml

--- a/.pages.yml
+++ b/.pages.yml
@@ -64,7 +64,7 @@ content:
         type: date
         required: true
         options:
-          format: MMMM D, YYYY
+          format: MMMM d, YYYY
       - name: body
         label: Body
         description: Usually just the change log.
