Get the site to deploy

--- a/.pages.yml
+++ b/.pages.yml
@@ -35,7 +35,7 @@ content:
         label: HX-DOS build filename
         type: string
 
-      # Presently obsolete flavors
+      # Currently obsolete flavors
       - name: macos_special_file
         label: macOS High Sierra special build filename
         type: string
@@ -58,7 +58,7 @@ content:
         label: Secondary Version
         type: string
         required: false
-        description: For specific versions that has both a 0.xx.x string and a YYYY.MM.x string.
+        description: For specific versions that has both a 0.xx.x-style ver num and a YYYY.MM.x-style ver num.
       - name: date
         label: Date
         type: date
@@ -67,7 +67,7 @@ content:
           format: MMMM d, yyyy
       - name: body
         label: Body
-        description: Usually just the change log.
+        description: Usually just the changelog.
         type: rich-text
         required: true
     view:
