Prepare for release

--- a/dosbox-x.reference.conf
+++ b/dosbox-x.reference.conf
@@ -1124,6 +1124,7 @@ timeout     = 0
 #                  starttranspath: Specify whether DOSBox-X should automatically translate all paths in the command-line to host system paths when starting programs to run on the host system.
 #                       startwait: Specify whether DOSBox-X should wait for the host system applications after they are started.
 #                      startquiet: If set, before launching host system applications to run on the host DOSBox-X will not show messages like "Now run it as a Windows application".
+#                    startnopause: If set, DOSBox-X will not pause after host command execution is completed.
 #                          vmware: Enable VMware interface emulation including guest mouse integration (when used along with e.g. VMware mouse driver for Windows 3.x).
 #                           int33: Enable INT 33H for mouse support.
 #               mouse report rate: Mouse reporting rate, or 0 for auto. This affects how often mouse events are reported to the guest through the mouse interrupt.
@@ -1175,6 +1176,7 @@ startcmd                        = false
 starttranspath                  = true
 startwait                       = true
 startquiet                      = false
+startnopause                    = false
 vmware                          = true
 int33                           = true
 mouse report rate               = 0
