--- a/contrib/windows/installer/dosbox-x.reference.setup.conf
+++ b/contrib/windows/installer/dosbox-x.reference.setup.conf
@@ -2341,6 +2341,7 @@ timeout     = 0
 #                                        startwait: Specify whether DOSBox-X should wait for the host system applications after they are started.
 #                                       startquiet: If set, before launching host system applications to run on the host DOSBox-X will not show messages like "Now run it as a Windows application".
 #DOSBOX-X-ADV:#                                       startincon: START command will start these commands (separated by space) in a console and wait for a key press before exiting.
+#                                     startnopause: If set, DOSBox-X will not pause after host command execution is completed.
 #                                           vmware: Enable VMware interface emulation including guest mouse integration (when used along with e.g. VMware mouse driver for Windows 3.x).
 #                                            int33: Enable INT 33H for mouse support.
 #DOSBOX-X-ADV:#                                      int33 max x: For guest to host cursor integration with DOS games, assume the maximum reported X coordinate has this value, if this is nonzero.
@@ -2477,6 +2478,7 @@ starttranspath                                   = true
 startwait                                        = true
 startquiet                                       = false
 #DOSBOX-X-ADV:startincon                                       = assoc attrib chcp copy dir echo for ftype help if set type ver vol xcopy
+startnopause                                     = false
 vmware                                           = true
 int33                                            = true
 #DOSBOX-X-ADV:int33 max x                                      = 0
