--- a/dosbox-x.reference.full.conf
+++ b/dosbox-x.reference.full.conf
@@ -2281,6 +2281,7 @@ timeout     = 0
 #                                        startwait: Specify whether DOSBox-X should wait for the host system applications after they are started.
 #                                       startquiet: If set, before launching host system applications to run on the host DOSBox-X will not show messages like "Now run it as a Windows application".
 #                                       startincon: START command will start these commands (separated by space) in a console and wait for a key press before exiting.
+#                                     startnopause: If set, DOSBox-X will not pause after host command execution is completed.
 #                                           vmware: Enable VMware interface emulation including guest mouse integration (when used along with e.g. VMware mouse driver for Windows 3.x).
 #                                            int33: Enable INT 33H for mouse support.
 #                                      int33 max x: For guest to host cursor integration with DOS games, assume the maximum reported X coordinate has this value, if this is nonzero.
@@ -2413,6 +2414,7 @@ starttranspath                                   = true
 startwait                                        = true
 startquiet                                       = false
 startincon                                       = assoc attrib chcp copy dir echo for ftype help if set type ver vol xcopy
+startnopause                                     = false
 vmware                                           = true
 int33                                            = true
 int33 max x                                      = 0
