--- a/dosbox-x.reference.conf
+++ b/dosbox-x.reference.conf
@@ -119,6 +119,11 @@ debuggerrun = debugger
 #                  language: Select a language file for DOSBox-X to use. Encoded with either UTF-8 or a DOS code page.
 #                              You can set code page either in the language file or with "country" setting in [config] section.
 #                     title: Additional text to place in the title bar of the window.
+#                 logo text: Text to place at the bottom of the screen during the startup logo. Text will line wrap automatically.
+#                              To explicitly break to the next line, put \n in the string.
+#                      logo: Location of PNG images to use in place of the DOSBox-X logo at startup.
+#                              This is the path of the base file name. For example logo=subdir\sets\007\logo
+#                              with machine=vgaonly will use subdir\sets\007\logo224x224.png as the logo.
 #              fastbioslogo: If set, DOSBox-X will skip the BIOS screen by activating fast BIOS logo mode (without 1-second pause).
 #               startbanner: If set (default), DOSBox-X will display the welcome banner when it starts.
 #          bannercolortheme: You can specify a different background color theme for the welcome banner from the default one.
@@ -203,6 +208,8 @@ debuggerrun = debugger
 #
 language                  = 
 title                     = 
+logo text                 = 
+logo                      = 
 fastbioslogo              = false
 startbanner               = true
 bannercolortheme          = default
@@ -451,7 +458,7 @@ vsyncrate = 75
 #               core: CPU Core used in emulation. auto will switch to dynamic if available and appropriate.
 #                       For the dynamic core, both dynamic_x86 and dynamic_rec are supported (dynamic_x86 is preferred).
 #                       Windows 95 or other preemptive multitasking OSes will not work with the dynamic_rec core.
-#                       Possible values: auto, dynamic, dynamic_x86, dynamic_nodhfpu, dynamic, dynamic_rec, normal, full, simple.
+#                       Possible values: auto, normal, full, simple.
 #                fpu: Enable FPU emulation
 #                       Possible values: true, false, 1, 0, auto, 8087, 287, 387.
 #         rdtsc rate: If nonzero, the Pentium RDTSC counter will tick at this rate per millisecond instead of by the cycle count
