--- a/dosbox-x.reference.full.conf
+++ b/dosbox-x.reference.full.conf
@@ -193,6 +193,11 @@ debuggerrun = debugger
 #                                        language: Select a language file for DOSBox-X to use. Encoded with either UTF-8 or a DOS code page.
 #                                                    You can set code page either in the language file or with "country" setting in [config] section.
 #                                           title: Additional text to place in the title bar of the window.
+#                                       logo text: Text to place at the bottom of the screen during the startup logo. Text will line wrap automatically.
+#                                                    To explicitly break to the next line, put \n in the string.
+#                                            logo: Location of PNG images to use in place of the DOSBox-X logo at startup.
+#                                                    This is the path of the base file name. For example logo=subdir\sets\007\logo
+#                                                    with machine=vgaonly will use subdir\sets\007\logo224x224.png as the logo.
 #                                    fastbioslogo: If set, DOSBox-X will skip the BIOS screen by activating fast BIOS logo mode (without 1-second pause).
 #                        disable graphical splash: If set, DOSBox-X will always display text-mode BIOS splash screen instead of the graphical one.
 #                                                    The text-mode BIOS screen will automatically be used if the TrueType font (TTF) output is enabled.
@@ -438,6 +443,8 @@ debuggerrun = debugger
 #                                  enable pci bus: Enable PCI bus emulation
 language                                        = 
 title                                           = 
+logo text                                       = 
+logo                                            = 
 fastbioslogo                                    = false
 disable graphical splash                        = false
 startbanner                                     = true
@@ -1073,7 +1080,7 @@ vsyncrate = 75
 #                                            core: CPU Core used in emulation. auto will switch to dynamic if available and appropriate.
 #                                                    For the dynamic core, both dynamic_x86 and dynamic_rec are supported (dynamic_x86 is preferred).
 #                                                    Windows 95 or other preemptive multitasking OSes will not work with the dynamic_rec core.
-#                                                    Possible values: auto, dynamic, dynamic_x86, dynamic_nodhfpu, dynamic, dynamic_rec, normal, full, simple.
+#                                                    Possible values: auto, normal, full, simple.
 #                                             fpu: Enable FPU emulation
 #                                                    Possible values: true, false, 1, 0, auto, 8087, 287, 387.
 #                                    cpuid string: If set, changes the string returned by the CPUID instruction. Normally by default the string is 'GenuineIntel'.
