Update dosbox.conf, and add conf option to define a memory mapped file for guest memory

--- a/dosbox-x.reference.full.conf
+++ b/dosbox-x.reference.full.conf
@@ -359,6 +359,8 @@ debuggerrun = debugger
 #                                    acpi sci irq: IRQ to assign as ACPI system control interrupt. set to -1 to automatically assign.
 #                                     acpi iobase: I/O port base for the ACPI device Power Management registers. Set to 0 for automatic assignment.
 #                              acpi reserved size: Amount of memory at top to reserve for ACPI structures and tables. Set to 0 for automatic assignment.
+#                                     memory file: If set, guest memory is memory-mapped from a file on disk, rather than allocated from memory.
+#                                                    This option can help keep DOSBox-X from consuming too much RAM for large values of memsize.
 #                                         memsize: Amount of memory DOSBox-X has in megabytes.
 #                                                    This value is best left at its default to avoid problems with some games,
 #                                                    although other games and applications may require a higher value.
@@ -499,6 +501,7 @@ acpi rsd ptr location                           = auto
 acpi sci irq                                    = -1
 acpi iobase                                     = 0
 acpi reserved size                              = 0
+memory file                                     = 
 memsize                                         = 16
 memsizekb                                       = 0
 dos mem limit                                   = 0
@@ -1080,7 +1083,7 @@ vsyncrate = 75
 #                                            core: CPU Core used in emulation. auto will switch to dynamic if available and appropriate.
 #                                                    For the dynamic core, both dynamic_x86 and dynamic_rec are supported (dynamic_x86 is preferred).
 #                                                    Windows 95 or other preemptive multitasking OSes will not work with the dynamic_rec core.
-#                                                    Possible values: auto, normal, full, simple.
+#                                                    Possible values: auto, dynamic, dynamic_x86, dynamic_nodhfpu, dynamic, dynamic_rec, normal, full, simple.
 #                                             fpu: Enable FPU emulation
 #                                                    Possible values: true, false, 1, 0, auto, 8087, 287, 387.
 #                                    cpuid string: If set, changes the string returned by the CPUID instruction. Normally by default the string is 'GenuineIntel'.
@@ -1106,8 +1109,14 @@ vsyncrate = 75
 #               allow lmsw to exit protected mode: Controls whether the processor will allow the guest to exit protected mode using the 286 LMSW instruction (clear the PE bit)
 #                                                    Possible values: true, false, 1, 0, auto.
 #                                 report fdiv bug: If set, the FDIV bug will be reported with the cputype=pentium setting.
-#                                      enable msr: Allow RDMSR/WRMSR instructions. This option is only meaningful when cputype=pentium.
-#                                                    WARNING: Leaving this option enabled while installing Windows 95/98/ME can cause crashes.
+#                                      enable msr: Allow PSE (Page Size Extensions) to paging.
+#                                                    none=Do not enable PSE
+#                                                    auto=Controlled by cpu type
+#                                                    pse=Basic PSE
+#                                                    pse36=PSE with 36-bit addressing
+#                                                    pse40=PSE with 40-bit addressing
+#                                      enable pse: 
+#                                                    Possible values: auto, none, pse, pse36, pse40, true, false.
 #                                enable cmpxchg8b: Enable Pentium CMPXCHG8B instruction. Enable this explicitly if using software that uses this instruction.
 #                                                    You must enable this option to run Windows ME because portions of the kernel rely on this instruction.
 #                                  enable syscall: Allow SYSENTER/SYSEXIT instructions. This option is only meaningful when cputype=pentium_ii.
@@ -1195,6 +1204,7 @@ mask stack pointer for enter leave instructions = auto
 allow lmsw to exit protected mode               = auto
 report fdiv bug                                 = false
 enable msr                                      = true
+enable pse                                      = auto
 enable cmpxchg8b                                = true
 enable syscall                                  = true
 ignore undefined msr                            = false
@@ -2301,6 +2311,10 @@ timeout     = 0
 #                                                     x=spec, y=spec
 #                                                     spec:   <number>    position adjust, can be positive or negative
 #                                                             max-excess  if game sets maximum larger than int33 max x/y, adjust the position forward by the difference
+#                           int33 mickey threshold: The smallest amount of mouse motion that will be reported to the guest. Motion below this amount is buffered until the threshold is met.
+#                                                     Some DOS programs do not properly respond to small mouse movements causing effects like a sluggish cursor or cursor drift.
+#                                                     Increase this option to the smallest value that achieves natural feeling motion.
+#                                                     - Ultima Underworld: Use 2
 #                                mouse report rate: Mouse reporting rate, or 0 for auto. This affects how often mouse events are reported to the guest through the mouse interrupt.
 #                                                     Some games including CyClone need a lower reporting rate to function correctly. Auto mode allows the guest to change the report rate through the PS/2 mouse emulation.
 #                                                     This option does not affect any DOS game that uses polling through INT 33h to detect mouse movement.
@@ -2427,6 +2441,7 @@ int33                                            = true
 int33 max x                                      = 0
 int33 max y                                      = 0
 int33 xy adjust                                  = 
+int33 mickey threshold                           = 1
 mouse report rate                                = 0
 int33 hide host cursor if interrupt subroutine   = true
 int33 hide host cursor when polling              = false
