--- a/contrib/windows/installer/dosbox-x.reference.setup.conf
+++ b/contrib/windows/installer/dosbox-x.reference.setup.conf
@@ -367,6 +367,8 @@ debuggerrun = debugger
 #DOSBOX-X-ADV:#                                    acpi sci irq: IRQ to assign as ACPI system control interrupt. set to -1 to automatically assign.
 #DOSBOX-X-ADV:#                                     acpi iobase: I/O port base for the ACPI device Power Management registers. Set to 0 for automatic assignment.
 #DOSBOX-X-ADV:#                              acpi reserved size: Amount of memory at top to reserve for ACPI structures and tables. Set to 0 for automatic assignment.
+#                                     memory file: If set, guest memory is memory-mapped from a file on disk, rather than allocated from memory.
+#                                                    This option can help keep DOSBox-X from consuming too much RAM for large values of memsize.
 #                                         memsize: Amount of memory DOSBox-X has in megabytes.
 #                                                    This value is best left at its default to avoid problems with some games,
 #                                                    although other games and applications may require a higher value.
@@ -511,6 +513,7 @@ a20                                             = mask
 #DOSBOX-X-ADV:acpi sci irq                                    = -1
 #DOSBOX-X-ADV:acpi iobase                                     = 0
 #DOSBOX-X-ADV:acpi reserved size                              = 0
+memory file                                     = 
 memsize                                         = 16
 #DOSBOX-X-ADV:memsizekb                                       = 0
 #DOSBOX-X-ADV:dos mem limit                                   = 0
@@ -1108,7 +1111,7 @@ vsyncrate = 75
 #                                            core: CPU Core used in emulation. auto will switch to dynamic if available and appropriate.
 #                                                    For the dynamic core, both dynamic_x86 and dynamic_rec are supported (dynamic_x86 is preferred).
 #                                                    Windows 95 or other preemptive multitasking OSes will not work with the dynamic_rec core.
-#                                                    Possible values: auto, normal, full, simple.
+#                                                    Possible values: auto, dynamic, dynamic_x86, dynamic_nodhfpu, dynamic, dynamic_rec, normal, full, simple.
 #                                             fpu: Enable FPU emulation
 #                                                    Possible values: true, false, 1, 0, auto, 8087, 287, 387.
 #DOSBOX-X-ADV:#                                    cpuid string: If set, changes the string returned by the CPUID instruction. Normally by default the string is 'GenuineIntel'.
@@ -1134,8 +1137,14 @@ vsyncrate = 75
 #DOSBOX-X-ADV:#               allow lmsw to exit protected mode: Controls whether the processor will allow the guest to exit protected mode using the 286 LMSW instruction (clear the PE bit)
 #DOSBOX-X-ADV:#                                                    Possible values: true, false, 1, 0, auto.
 #DOSBOX-X-ADV:#                                 report fdiv bug: If set, the FDIV bug will be reported with the cputype=pentium setting.
-#DOSBOX-X-ADV:#                                      enable msr: Allow RDMSR/WRMSR instructions. This option is only meaningful when cputype=pentium.
-#DOSBOX-X-ADV:#                                                    WARNING: Leaving this option enabled while installing Windows 95/98/ME can cause crashes.
+#DOSBOX-X-ADV:#                                      enable msr: Allow PSE (Page Size Extensions) to paging.
+#DOSBOX-X-ADV:#                                                    none=Do not enable PSE
+#DOSBOX-X-ADV:#                                                    auto=Controlled by cpu type
+#DOSBOX-X-ADV:#                                                    pse=Basic PSE
+#DOSBOX-X-ADV:#                                                    pse36=PSE with 36-bit addressing
+#DOSBOX-X-ADV:#                                                    pse40=PSE with 40-bit addressing
+#DOSBOX-X-ADV:#                                      enable pse: 
+#DOSBOX-X-ADV:#                                                    Possible values: auto, none, pse, pse36, pse40, true, false.
 #DOSBOX-X-ADV:#                                enable cmpxchg8b: Enable Pentium CMPXCHG8B instruction. Enable this explicitly if using software that uses this instruction.
 #DOSBOX-X-ADV:#                                                    You must enable this option to run Windows ME because portions of the kernel rely on this instruction.
 #DOSBOX-X-ADV:#                                  enable syscall: Allow SYSENTER/SYSEXIT instructions. This option is only meaningful when cputype=pentium_ii.
@@ -1227,6 +1236,7 @@ segment limits                                  = true
 #DOSBOX-X-ADV:allow lmsw to exit protected mode               = auto
 #DOSBOX-X-ADV:report fdiv bug                                 = false
 #DOSBOX-X-ADV:enable msr                                      = true
+#DOSBOX-X-ADV:enable pse                                      = auto
 #DOSBOX-X-ADV:enable cmpxchg8b                                = true
 #DOSBOX-X-ADV:enable syscall                                  = true
 #DOSBOX-X-ADV:ignore undefined msr                            = false
@@ -2361,6 +2371,10 @@ timeout     = 0
 #DOSBOX-X-ADV:#                                                     x=spec, y=spec
 #DOSBOX-X-ADV:#                                                     spec:   <number>    position adjust, can be positive or negative
 #DOSBOX-X-ADV:#                                                             max-excess  if game sets maximum larger than int33 max x/y, adjust the position forward by the difference
+#DOSBOX-X-ADV:#                           int33 mickey threshold: The smallest amount of mouse motion that will be reported to the guest. Motion below this amount is buffered until the threshold is met.
+#DOSBOX-X-ADV:#                                                     Some DOS programs do not properly respond to small mouse movements causing effects like a sluggish cursor or cursor drift.
+#DOSBOX-X-ADV:#                                                     Increase this option to the smallest value that achieves natural feeling motion.
+#DOSBOX-X-ADV:#                                                     - Ultima Underworld: Use 2
 #                                mouse report rate: Mouse reporting rate, or 0 for auto. This affects how often mouse events are reported to the guest through the mouse interrupt.
 #                                                     Some games including CyClone need a lower reporting rate to function correctly. Auto mode allows the guest to change the report rate through the PS/2 mouse emulation.
 #                                                     This option does not affect any DOS game that uses polling through INT 33h to detect mouse movement.
@@ -2413,7 +2427,7 @@ timeout     = 0
 #                                     dos idle api: If set, DOSBox-X can lower the host system's CPU load when a supported guest program is idle.
 #DOSBOX-X-ADV-SEE:#
 #DOSBOX-X-ADV-SEE:# Advanced options (see full configuration reference file [dosbox-x.reference.full.conf] for more details):
-#DOSBOX-X-ADV-SEE:# -> xms memmove causes flat real mode; xms init causes flat real mode; resized free memory block becomes allocated; badcommandhandler; mscdex device name; hma allow reservation; command shell flush keyboard buffer; special operation file prefix; drive z is remote; drive z convert fat; drive z expand path; drive z hide files; automount drive directories; hidenonrepresentable; hma minimum allocation; dos sda size; hma free space; cpm compatibility mode; minimum dos initial private segment; minimum mcb segment; enable dummy device mcb; maximum environment block size on exec; additional environment block size on exec; enable a20 on windows init; zero memory on xms memory allocation; vcpi; unmask timer on disk io; zero int 67h if no ems; zero unused int 68h; emm386 startup active; zero memory on ems memory allocation; ems system handle memory size; ems system handle on even megabyte; ems frame; umb start; umb end; kernel allocation in umb; keep umb on boot; keep private area on boot; private area in umb; autoa20fix; autoloadfix; startincon; int33 max x; int33 max y; int33 xy adjust; int33 hide host cursor if interrupt subroutine; int33 hide host cursor when polling; int33 disable cell granularity; int 13 disk change detect; int 13 extensions; biosps2; int15 wait force unmask irq; int15 mouse callback does not preserve registers; filenamechar; collating and uppercase; con device use int 16h to detect keyboard input; zero memory on int 21h memory allocation; pipe temporary device
+#DOSBOX-X-ADV-SEE:# -> xms memmove causes flat real mode; xms init causes flat real mode; resized free memory block becomes allocated; badcommandhandler; mscdex device name; hma allow reservation; command shell flush keyboard buffer; special operation file prefix; drive z is remote; drive z convert fat; drive z expand path; drive z hide files; automount drive directories; hidenonrepresentable; hma minimum allocation; dos sda size; hma free space; cpm compatibility mode; minimum dos initial private segment; minimum mcb segment; enable dummy device mcb; maximum environment block size on exec; additional environment block size on exec; enable a20 on windows init; zero memory on xms memory allocation; vcpi; unmask timer on disk io; zero int 67h if no ems; zero unused int 68h; emm386 startup active; zero memory on ems memory allocation; ems system handle memory size; ems system handle on even megabyte; ems frame; umb start; umb end; kernel allocation in umb; keep umb on boot; keep private area on boot; private area in umb; autoa20fix; autoloadfix; startincon; int33 max x; int33 max y; int33 xy adjust; int33 mickey threshold; int33 hide host cursor if interrupt subroutine; int33 hide host cursor when polling; int33 disable cell granularity; int 13 disk change detect; int 13 extensions; biosps2; int15 wait force unmask irq; int15 mouse callback does not preserve registers; filenamechar; collating and uppercase; con device use int 16h to detect keyboard input; zero memory on int 21h memory allocation; pipe temporary device
 #DOSBOX-X-ADV-SEE:#
 xms                                              = true
 #DOSBOX-X-ADV:xms memmove causes flat real mode                = true
@@ -2491,6 +2505,7 @@ int33                                            = true
 #DOSBOX-X-ADV:int33 max x                                      = 0
 #DOSBOX-X-ADV:int33 max y                                      = 0
 #DOSBOX-X-ADV:int33 xy adjust                                  = 
+#DOSBOX-X-ADV:int33 mickey threshold                           = 1
 mouse report rate                                = 0
 #DOSBOX-X-ADV:int33 hide host cursor if interrupt subroutine   = true
 #DOSBOX-X-ADV:int33 hide host cursor when polling              = false
