--- a/dosbox-x.reference.conf
+++ b/dosbox-x.reference.conf
@@ -192,6 +192,8 @@ debuggerrun = debugger
 #                                on                           Lock A20 gate on (Software/OS cannot disable A20)
 #                                off_fake                     Lock A20 gate off but allow bit to toggle (hope your DOS game tests the HMA!)
 #                                on_fake                      Lock A20 gate on but allow bit to toggle
+#               memory file: If set, guest memory is memory-mapped from a file on disk, rather than allocated from memory.
+#                              This option can help keep DOSBox-X from consuming too much RAM for large values of memsize.
 #                   memsize: Amount of memory DOSBox-X has in megabytes.
 #                              This value is best left at its default to avoid problems with some games,
 #                              although other games and applications may require a higher value.
@@ -232,6 +234,7 @@ savefile                  =
 saveremark                = true
 forceloadstate            = false
 a20                       = mask
+memory file               = 
 memsize                   = 16
 nocachedir                = false
 freesizecap               = cap
@@ -458,7 +461,7 @@ vsyncrate = 75
 #               core: CPU Core used in emulation. auto will switch to dynamic if available and appropriate.
 #                       For the dynamic core, both dynamic_x86 and dynamic_rec are supported (dynamic_x86 is preferred).
 #                       Windows 95 or other preemptive multitasking OSes will not work with the dynamic_rec core.
-#                       Possible values: auto, normal, full, simple.
+#                       Possible values: auto, dynamic, dynamic_x86, dynamic_nodhfpu, dynamic, dynamic_rec, normal, full, simple.
 #                fpu: Enable FPU emulation
 #                       Possible values: true, false, 1, 0, auto, 8087, 287, 387.
 #         rdtsc rate: If nonzero, the Pentium RDTSC counter will tick at this rate per millisecond instead of by the cycle count
@@ -1154,7 +1157,7 @@ timeout     = 0
 #                    dos idle api: If set, DOSBox-X can lower the host system's CPU load when a supported guest program is idle.
 #
 # Advanced options (see full configuration reference file [dosbox-x.reference.full.conf] for more details):
-# -> xms memmove causes flat real mode; xms init causes flat real mode; resized free memory block becomes allocated; badcommandhandler; mscdex device name; hma allow reservation; command shell flush keyboard buffer; special operation file prefix; drive z is remote; drive z convert fat; drive z expand path; drive z hide files; automount drive directories; hidenonrepresentable; hma minimum allocation; dos sda size; hma free space; cpm compatibility mode; minimum dos initial private segment; minimum mcb segment; enable dummy device mcb; maximum environment block size on exec; additional environment block size on exec; enable a20 on windows init; zero memory on xms memory allocation; vcpi; unmask timer on disk io; zero int 67h if no ems; zero unused int 68h; emm386 startup active; zero memory on ems memory allocation; ems system handle memory size; ems system handle on even megabyte; ems frame; umb start; umb end; kernel allocation in umb; keep umb on boot; keep private area on boot; private area in umb; autoa20fix; autoloadfix; startincon; int33 max x; int33 max y; int33 xy adjust; int33 hide host cursor if interrupt subroutine; int33 hide host cursor when polling; int33 disable cell granularity; int 13 disk change detect; int 13 extensions; biosps2; int15 wait force unmask irq; int15 mouse callback does not preserve registers; filenamechar; collating and uppercase; con device use int 16h to detect keyboard input; zero memory on int 21h memory allocation; pipe temporary device
+# -> xms memmove causes flat real mode; xms init causes flat real mode; resized free memory block becomes allocated; badcommandhandler; mscdex device name; hma allow reservation; command shell flush keyboard buffer; special operation file prefix; drive z is remote; drive z convert fat; drive z expand path; drive z hide files; automount drive directories; hidenonrepresentable; hma minimum allocation; dos sda size; hma free space; cpm compatibility mode; minimum dos initial private segment; minimum mcb segment; enable dummy device mcb; maximum environment block size on exec; additional environment block size on exec; enable a20 on windows init; zero memory on xms memory allocation; vcpi; unmask timer on disk io; zero int 67h if no ems; zero unused int 68h; emm386 startup active; zero memory on ems memory allocation; ems system handle memory size; ems system handle on even megabyte; ems frame; umb start; umb end; kernel allocation in umb; keep umb on boot; keep private area on boot; private area in umb; autoa20fix; autoloadfix; startincon; int33 max x; int33 max y; int33 xy adjust; int33 mickey threshold; int33 hide host cursor if interrupt subroutine; int33 hide host cursor when polling; int33 disable cell granularity; int 13 disk change detect; int 13 extensions; biosps2; int15 wait force unmask irq; int15 mouse callback does not preserve registers; filenamechar; collating and uppercase; con device use int 16h to detect keyboard input; zero memory on int 21h memory allocation; pipe temporary device
 #
 xms                             = true
 xms handles                     = 0
