Fix help text mistake and update conf sample files

--- a/dosbox-x.reference.full.conf
+++ b/dosbox-x.reference.full.conf
@@ -1109,13 +1109,14 @@ vsyncrate = 75
 #               allow lmsw to exit protected mode: Controls whether the processor will allow the guest to exit protected mode using the 286 LMSW instruction (clear the PE bit)
 #                                                    Possible values: true, false, 1, 0, auto.
 #                                 report fdiv bug: If set, the FDIV bug will be reported with the cputype=pentium setting.
-#                                      enable msr: Allow PSE (Page Size Extensions) to paging.
+#                                      enable msr: Allow RDMSR/WRMSR instructions. This option is only meaningful when cputype=pentium.
+#                                                    WARNING: Leaving this option enabled while installing Windows 95/98/ME can cause crashes.
+#                                      enable pse: Allow PSE (Page Size Extensions) to paging.
 #                                                    none=Do not enable PSE
 #                                                    auto=Controlled by cpu type
 #                                                    pse=Basic PSE
 #                                                    pse36=PSE with 36-bit addressing
 #                                                    pse40=PSE with 40-bit addressing
-#                                      enable pse: 
 #                                                    Possible values: auto, none, pse, pse36, pse40, true, false.
 #                                enable cmpxchg8b: Enable Pentium CMPXCHG8B instruction. Enable this explicitly if using software that uses this instruction.
 #                                                    You must enable this option to run Windows ME because portions of the kernel rely on this instruction.
