--- a/contrib/windows/installer/dosbox-x.reference.setup.conf
+++ b/contrib/windows/installer/dosbox-x.reference.setup.conf
@@ -1137,13 +1137,14 @@ vsyncrate = 75
 #DOSBOX-X-ADV:#               allow lmsw to exit protected mode: Controls whether the processor will allow the guest to exit protected mode using the 286 LMSW instruction (clear the PE bit)
 #DOSBOX-X-ADV:#                                                    Possible values: true, false, 1, 0, auto.
 #DOSBOX-X-ADV:#                                 report fdiv bug: If set, the FDIV bug will be reported with the cputype=pentium setting.
-#DOSBOX-X-ADV:#                                      enable msr: Allow PSE (Page Size Extensions) to paging.
+#DOSBOX-X-ADV:#                                      enable msr: Allow RDMSR/WRMSR instructions. This option is only meaningful when cputype=pentium.
+#DOSBOX-X-ADV:#                                                    WARNING: Leaving this option enabled while installing Windows 95/98/ME can cause crashes.
+#DOSBOX-X-ADV:#                                      enable pse: Allow PSE (Page Size Extensions) to paging.
 #DOSBOX-X-ADV:#                                                    none=Do not enable PSE
 #DOSBOX-X-ADV:#                                                    auto=Controlled by cpu type
 #DOSBOX-X-ADV:#                                                    pse=Basic PSE
 #DOSBOX-X-ADV:#                                                    pse36=PSE with 36-bit addressing
 #DOSBOX-X-ADV:#                                                    pse40=PSE with 40-bit addressing
-#DOSBOX-X-ADV:#                                      enable pse: 
 #DOSBOX-X-ADV:#                                                    Possible values: auto, none, pse, pse36, pse40, true, false.
 #DOSBOX-X-ADV:#                                enable cmpxchg8b: Enable Pentium CMPXCHG8B instruction. Enable this explicitly if using software that uses this instruction.
 #DOSBOX-X-ADV:#                                                    You must enable this option to run Windows ME because portions of the kernel rely on this instruction.
@@ -1219,7 +1220,7 @@ vsyncrate = 75
 #DOSBOX-X-ADV:#                                                    then jump to realmode with B still set (aka Huge Unreal mode). Needed for Project Angel.
 #DOSBOX-X-ADV-SEE:#
 #DOSBOX-X-ADV-SEE:# Advanced options (see full configuration reference file [dosbox-x.reference.full.conf] for more details):
-#DOSBOX-X-ADV-SEE:# -> cpuid string; processor serial number; double fault; clear trap flag on unhandled int 1; reset on triple fault; always report double fault; always report triple fault; mask stack pointer for enter leave instructions; allow lmsw to exit protected mode; report fdiv bug; enable msr; enable cmpxchg8b; enable syscall; ignore undefined msr; interruptible rep string op; dynamic core cache block size; cycle emulation percentage adjust; stop turbo on key; stop turbo after second; use dynamic core with paging on; ignore opcode 63; apmbios pnp; apm power button event; apmbios version; apmbios allow realmode; apmbios allow 16-bit protected mode; apmbios allow 32-bit protected mode; integration device pnp; isapnpport; realbig16
+#DOSBOX-X-ADV-SEE:# -> cpuid string; processor serial number; double fault; clear trap flag on unhandled int 1; reset on triple fault; always report double fault; always report triple fault; mask stack pointer for enter leave instructions; allow lmsw to exit protected mode; report fdiv bug; enable msr; enable pse; enable cmpxchg8b; enable syscall; ignore undefined msr; interruptible rep string op; dynamic core cache block size; cycle emulation percentage adjust; stop turbo on key; stop turbo after second; use dynamic core with paging on; ignore opcode 63; apmbios pnp; apm power button event; apmbios version; apmbios allow realmode; apmbios allow 16-bit protected mode; apmbios allow 32-bit protected mode; integration device pnp; isapnpport; realbig16
 #DOSBOX-X-ADV-SEE:#
 core                                            = auto
 fpu                                             = true
