--- a/contrib/windows/installer/dosbox-x.reference.setup.conf
+++ b/contrib/windows/installer/dosbox-x.reference.setup.conf
@@ -373,6 +373,10 @@ debuggerrun = debugger
 #                                                    This value is best left at its default to avoid problems with some games,
 #                                                    although other games and applications may require a higher value.
 #                                                    Programs that use 286 protected mode like Windows 3.0 in Standard Mode may crash with more than 15MB.
+#                                                    A memory file is required to emulate a memory size of 4GB or more.
+#                                                    The maximum value allowed is affected by the memalias setting which affects the maximum amount of memory CPU can access as a power of 2.
+#                                                    The maximum value is also affected by the CPU type. See DOSBox-X console and log file for details.
+#                                                    The maximum setting 1048576 represents 1TB and requires at least a Pentium II and PSE-40 emulation.
 #DOSBOX-X-ADV:#                                       memsizekb: Amount of memory DOSBox-X has in kilobytes.
 #DOSBOX-X-ADV:#                                                    This value should normally be set to 0.
 #DOSBOX-X-ADV:#                                                    If nonzero, it is added to the memsize parameter.
@@ -1148,7 +1152,7 @@ vsyncrate = 75
 #DOSBOX-X-ADV:#                                                    Possible values: auto, none, pse, pse36, pse40, true, false.
 #DOSBOX-X-ADV:#                                enable cmpxchg8b: Enable Pentium CMPXCHG8B instruction. Enable this explicitly if using software that uses this instruction.
 #DOSBOX-X-ADV:#                                                    You must enable this option to run Windows ME because portions of the kernel rely on this instruction.
-#DOSBOX-X-ADV:#                                  enable syscall: Allow SYSENTER/SYSEXIT instructions. This option is only meaningful when cputype=pentium_ii.
+#DOSBOX-X-ADV:#                                  enable syscall: Allow SYSENTER/SYSEXIT instructions. This option is only meaningful when is cputype=pentium_ii or higher.
 #DOSBOX-X-ADV:#                                                    
 #DOSBOX-X-ADV:#                            ignore undefined msr: Ignore RDMSR/WRMSR on undefined registers. Normally the CPU will fire an Invalid Opcode exception in that case.
 #DOSBOX-X-ADV:#                                                    This option is off by default, enable if using software or drivers that assumes the presence of
