--- a/dosbox-x.reference.conf
+++ b/dosbox-x.reference.conf
@@ -198,6 +198,10 @@ debuggerrun = debugger
 #                              This value is best left at its default to avoid problems with some games,
 #                              although other games and applications may require a higher value.
 #                              Programs that use 286 protected mode like Windows 3.0 in Standard Mode may crash with more than 15MB.
+#                              A memory file is required to emulate a memory size of 4GB or more.
+#                              The maximum value allowed is affected by the memalias setting which affects the maximum amount of memory CPU can access as a power of 2.
+#                              The maximum value is also affected by the CPU type. See DOSBox-X console and log file for details.
+#                              The maximum setting 1048576 represents 1TB and requires at least a Pentium II and PSE-40 emulation.
 #                nocachedir: If set, MOUNT commands will mount with -nocachedir (disable directory caching) by default.
 #               freesizecap: If set to "cap" (="true"), the value of MOUNT -freesize will apply only if the actual free size is greater than the specified value.
 #                              If set to "relative", the value of MOUNT -freesize will change relative to the specified value.
