Clarify the memory file setting. No, you do not need to create or format it.

--- a/contrib/windows/installer/dosbox-x.reference.setup.conf
+++ b/contrib/windows/installer/dosbox-x.reference.setup.conf
@@ -369,6 +369,8 @@ debuggerrun = debugger
 #DOSBOX-X-ADV:#                              acpi reserved size: Amount of memory at top to reserve for ACPI structures and tables. Set to 0 for automatic assignment.
 #                                     memory file: If set, guest memory is memory-mapped from a file on disk, rather than allocated from memory.
 #                                                    This option can help keep DOSBox-X from consuming too much RAM for large values of memsize.
+#                                                    This option is required to emulate 4GB or more of RAM. The file will be created if it does not exist
+#                                                    and it does not require any special maintenance or formatting.
 #                                         memsize: Amount of memory DOSBox-X has in megabytes.
 #                                                    This value is best left at its default to avoid problems with some games,
 #                                                    although other games and applications may require a higher value.
