--- a/dosbox-x.reference.conf
+++ b/dosbox-x.reference.conf
@@ -194,6 +194,8 @@ debuggerrun = debugger
 #                                on_fake                      Lock A20 gate on but allow bit to toggle
 #               memory file: If set, guest memory is memory-mapped from a file on disk, rather than allocated from memory.
 #                              This option can help keep DOSBox-X from consuming too much RAM for large values of memsize.
+#                              This option is required to emulate 4GB or more of RAM. The file will be created if it does not exist
+#                              and it does not require any special maintenance or formatting.
 #                   memsize: Amount of memory DOSBox-X has in megabytes.
 #                              This value is best left at its default to avoid problems with some games,
 #                              although other games and applications may require a higher value.
